-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.3, Qt Creator 4.14.1
-
None
-
Qt Creator 4.13.3 (also tried on 4.14.1)
Qt 4.8.7
Ubunutu 18.04.5 64 bit
Intel® Core™ i7-9850H CPU @ 2.60GHz × 12
32GB RAM
-
-
17e2a80e10dfc7907cfe0e95c368710799edd1ef
When using autocomplete for C++ I have a particular enum which has ballooned in size since my project began. As the size has grown the autocomplete when typing in one of the name references has gotten slower and slower. Now the enum has about 500 values and it loads my 9th gen i7 to 100% and my whole system is locked up for 5-10s until my escape key-press registers.
I have recreated this using a similarly structured enum I created with a random word generator. To replicate start typing one of the examples from the params.h file in the project, the loading will start after you finish typing the common prefix.
The simple project to replicate is attached.
Thanks,
Michael
| For Gerrit Dashboard: QTCREATORBUG-25419 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 342136,2 | TextEditor: Prevent UI freeze when generating proposals | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |