TextEditor: Prevent UI freeze when generating proposals

Our fuzzy matcher slows down terribly if the input string has long-ish
substrings that partially match the pattern. We therefore skip the fuzzy
matching for proposal generation if we detect that the operation takes
longer than expected.

Fixes: QTCREATORBUG-25419
Change-Id: I57e0a57c620f42b80a0b02a93ff91fd1d2a35e44
Reviewed-by: David Schulz <david.schulz@qt.io>